Opened 18 years ago

Closed 18 years ago

#1288 closed bug (fixed)

StyledEdit does not print when there is only one line of text

Reported by: bnickname Owned by: jackburton
Priority: normal Milestone: R1/alpha1
Component: Applications/StyledEdit Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

With only one line of text, StyledEdit reports there are no pages to print when choosing print

Change History (4)

comment:1 by korli, 18 years ago

Owner: changed from korli to jackburton

Couldn't reproduce. I'm reassigning to Stefano, in case I missed something :)

comment:2 by jackburton, 18 years ago

I had a brief look at StyledEditWindow::Print(). When there's only one line, the values of firstLine and lastLine before the while loop at line 1167 are both 0. So the while loop is never executed. But 0 means the first line, so maybe we should change line 1167 to be

while (printLine <= lastLine).

I haven't done that change yet, because I see there are other problems with printing (The content of the view isn't shifted as it should, on print, so the text usually falls outside the margins of the print area). This could be a problem in BPicture, btw, I'll have a look at that before.

comment:3 by jackburton, 18 years ago

Milestone: R1R1/alpha

in reply to:  3 comment:4 by jackburton, 18 years ago

Resolution: fixed
Status: newclosed

Replying to jackburton:

Fixed in hrev22511. Printing in StyledEdit is still very much broken though.

Note: See TracTickets for help on using tickets.