StyledEdit didn't print anything if there's only one line (bug #1288). Note, though, that printing in StyledEdit is still very much broken. Often it prints only the current page, for example.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@22511 a95241bf-73f2-0310-859d-f6bbb57e9c96